--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,5 +6,6 @@ api-version: 1.19
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib:1.7.0
 commands:
-  getbindingboots:
+  getitems:
+  plshelpme:
     
